apps/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/part-of: jellyfin
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: jellyfin-security-headers@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - jellyfin.omv.mousses.xyz
      secretName: jellyfin-tls
  rules:
    - host: jellyfin.omv.mousses.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  name: http
